app/assets/stylesheets/application.css.scss
/* ... */
.btn:active {
  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
}
.btn.disabled {
  cursor: default;
  background-image: none;
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
  filter: alpha(opacity=65);
  -khtml-opacity: 0.65;
  -moz-opacity: 0.65;
  opacity: 0.65;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.btn[disabled] {
  cursor: default;
  background-image: none;
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
  filter: alpha(opacity=65);
  -khtml-opacity: 0.65;
  -moz-opacity: 0.65;
  opacity: 0.65;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.btn.large {
  font-size: 15px;
  line-height: normal;
  padding: 9px 14px 9px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}
.btn.small {
  padding: 7px 9px 7px;
  font-size: 11px;
}
:root .alert-message, :root .btn {
  border-radius: 0 0;
}
button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
  padding: 0;
  border: 0;
}
/* ++++++++++++ button ++++++++++++ */


/* ++++++++++++ footer ++++++++++++ */

div#footer {
	margin-top: 100px;
	text-align: center;
	border-top: 1px solid #CCC;
	background: transparent image-url('footer_fade.png') no-repeat top center;
}

/* ++++++++++++ footer ++++++++++++ */

div.publication-form, div.marketing-banner{
	margin: 12px 0;
	background-color: whiteSmoke;
	padding: 12px 12px 12px 24px;
	-moz-border-radius:    5px;
	-webkit-border-radius: 5px;
	border-radius:         5px;
	border: 1px solid #ddd;
	color: #404040;
}

div.publication-form {
	margin-bottom: 36px;
}

div.marketing-banner img {
	margin-bottom: 48px;
}

a.register {
	line-height: 2;
	float: right;
	font-size: 1.5em;
	-moz-border-radius:    5px !important;
	-webkit-border-radius: 5px !important;
	border-radius:         5px !important;
	margin-left: 12px;
}

div.publication-form p{
	display: inline;
}

div.marketing-banner {
	padding: 36px !important;
}

div.marketing-banner img {
	margin-left: auto;
    margin-right: auto;
	display: block;
}

table#profiles td.name {
	font-weight: bold;
}


/* tables */

table {
	border-top: 1px solid #ddd;
	border-bottom: none;
	margin-bottom: 0;
}

td, th {
	border-bottom: 1px solid #ddd;
}

tr.header-row th {
	background: whiteSmoke;
	color: black;
	font-weight: normal;
}

table.experience-table th {
	font-size: 115%;
	padding: 0.5em;
	font-weight: bold;

}

table.experience-table td {
	border-top: 2px solid white;
	padding: 0.5em;
	vertical-align: top;
	color: #00699E;
}

td.subject_area {
	font-weight: bold;
}

td.project-name {
	color: #272727 !important;
	font-weight: bold;
}

ul.experience-list li {
	margin: 36px 0 !important;
}



p.location {
	font-weight: bold;
	margin-bottom: 0;
}

.document-area {
	margin-top: 36px;
}

#wmd-button-bar {
	margin-bottom: 36px;
}

img.screenshot {
	margin: auto;
}

ul.vertical-gallery {
	padding: 36px 0 !important;
}

a.emphasis {
	font-size: larger;
}

img.paypal {
	float: left;
	margin-right: 24px;
}

p.paypal {
	margin-top: 52px;
}

p.url-info {
	margin-top: 36px;
	margin-bottom: 36px;
	font-size: 150%;
	font-weight: bold;
	color: #00699E;
}

p.url-info a {
	color: #272727;
	text-decoration: none;
}

